--- a/app/views/big_form/referent_willing.html.erb
+++ b/app/views/big_form/referent_willing.html.erb
@@ -5,7 +5,7 @@
   <p class="mb-4">Pour les questions suivantes, veuillez donner votre avis personnel.</p>
 
   <%= simple_form_for(@form, method: :put, url: wizard_path) do |f| %>
-    <p>23. Dans quelle mesure êtes-vous d'accord avec chacune des affirmations suivantes ?</p>
+    <p><b>23.</b> Dans quelle mesure êtes-vous d'accord avec chacune des affirmations suivantes ?</p>
     <div class="col-12 col-sm-6 pl-0 pl-4">
       <%= f.input :referent_implication, label: "La réduction des déchets fait déjà partie de ma vie", collection: ["Pas du tout d'accord", "Plutôt pas d'accord", "Ni en accord ni en désaccord", "Plutôt d'accord", "Tout à fait d'accord"], as: :select %>
       <%= f.input :referent_sorts, label: "Vous prenez soin de bien trier les déchets chez vous", collection: ["Pas du tout d'accord", "Plutôt pas d'accord", "Ni en accord ni en désaccord", "Plutôt d'accord", "Tout à fait d'accord"], as: :select %>
@@ -15,7 +15,7 @@
       <%= f.input :referent_willing, label: "Si ce Défi ZD Pro ou d’autres du même thème a lieu dans le futur, vous y participeriez", collection: ["Pas du tout d'accord", "Plutôt pas d'accord", "Ni en accord ni en désaccord", "Plutôt d'accord", "Tout à fait d'accord"], as: :select %>
     </div>
 
-    <p>24. Dans quelle mesure chacune des affirmations suivantes correspondent-elles à vos motivations pour vous inscrire à ce défi ?</p>
+    <p class="mt-4"><b>24.</b> Dans quelle mesure chacune des affirmations suivantes correspondent-elles à vos motivations pour vous inscrire à ce défi ?</p>
     <div class="col-12 col-sm-6 pl-0 pl-4">
       <%= f.input :referent_obligation, label: "Je suis obligé·e de le faire", collection: ["Pas du tout correspondant", "Peu correspondant", "Moyennement correspondant", "Bien correspondant", "Tout à fait correspondant"], as: :select %>
       <%= f.input :referent_obligation_feeling, label: "Je me sens obligé·e de le faire", collection: ["Pas du tout correspondant", "Peu correspondant", "Moyennement correspondant", "Bien correspondant", "Tout à fait correspondant"], as: :select %>
@@ -23,7 +23,7 @@
       <%= f.input :referent_fun, label: "C’est intéressant et amusant de le faire ", collection: ["Pas du tout correspondant", "Peu correspondant", "Moyennement correspondant", "Bien correspondant", "Tout à fait correspondant"], as: :select %>
     </div>
 
-    <p>25. Connaissez-vous par hasard des pratiques de réduction de déchets ?</p>
+    <p class="mt-4"><b>25.</b> Connaissez-vous par hasard des pratiques de réduction de déchets ?</p>
     <%= f.collection_radio_buttons :referent_techniques, ["Oui", "Non", "Non communiqué"], :to_s, :to_s do |input| %>
       <label class="mx-2 mb-3">
         <%= input.radio_button %>
@@ -34,7 +34,7 @@
       <%= f.input :referent_techniques_examples, label: "Si Oui, donnez des exemples " %>
     </div>
 
-    <p>26. Chez vous, adoptez-vous déjà des pratiques de réduction de déchets ?</p>
+    <p class="mt-4"><b>26.</b> Chez vous, adoptez-vous déjà des pratiques de réduction de déchets ?</p>
     <%= f.collection_radio_buttons :referent_actions_home, ["Oui", "Non", "Non communiqué"], :to_s, :to_s do |input| %>
       <label class="mx-2 mb-3">
         <%= input.radio_button %>
@@ -44,11 +44,17 @@
     <div class="pl-4">
       <%= f.input :referent_actions_home_examples, label: "Si Oui, donnez des exemples " %>
     </div>
-    <%= f.input :referent_personal_reasons, label: "27. Quelles sont les raisons personnelles pour lesquelles vous souhaitez participer à ce défi ?" %>
-    <%= f.input :referent_changes_wanted, label: "28. Que voudriez-vous voir changer dans votre structure au niveau des déchets ?" %>
-    <%= f.input :referent_accompaniment_need, label: "29. Sur quoi aimeriez-vous être accompagné·e pour mener à bien ce Défi Zéro Déchet des Pros ?" %>
 
-    <p>30. Vous êtes</p>
+    <p class="mt-4"><b>27.</b> Quelles sont les raisons personnelles pour lesquelles vous souhaitez participer à ce défi ?</p>
+    <%= f.input :referent_personal_reasons, label: false %>
+
+    <p class="mt-4"><b>28.</b> Que voudriez-vous voir changer dans votre structure au niveau des déchets ?</p>
+    <%= f.input :referent_changes_wanted, label: false %>
+
+    <p class="mt-4"><b>29.</b> Sur quoi aimeriez-vous être accompagné·e pour mener à bien ce Défi Zéro Déchet des Pros ?</p>
+    <%= f.input :referent_accompaniment_need, label: false %>
+
+    <p class="mt-4"><b>30.</b> Vous êtes</p>
     <%= f.collection_radio_buttons :referent_sex, ["Un homme", "Une femme", "Je ne souhaite pas le préciser"], :to_s, :to_s do |input| %>
       <label class="mx-2 mb-3">
         <%= input.radio_button %>
@@ -57,9 +63,12 @@
     <% end %>
 
     <div class="col-12 col-sm-6 pl-0">
-      <%= f.input :referent_age, label: "31. Votre âge" %>
-      <%= f.input :referent_seniority, label: "32. Depuis combien d'années travaillez-vous dans votre structure ?" %>
-      <%= f.input :referent_service, label: "33. Dans quel service travaillez-vous ?" %>
+      <p class="mt-4"><b>31.</b> Votre âge</p>
+      <%= f.input :referent_age, label: false %>
+      <p class="mt-4"><b>32.</b> Depuis combien d'années travaillez-vous dans votre structure ?</p>
+      <%= f.input :referent_seniority, label: false %>
+      <p class="mt-4"><b>33.</b> Dans quel service travaillez-vous ?</p>
+      <%= f.input :referent_service, label: false %>
     </div>
 
     <div class="d-flex justify-content-around mb-5 mt-4">
