--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -63,7 +63,7 @@
       <%= link_to "Modifier mon profil", edit_user_path(@user), class:"btn btn-success" %>
       <%= link_to "Modifier ma structure", edit_company_path(@user.company_id), class:"btn btn-success" %>
       <%= link_to "Suprimer mon compte", unknown_user_path(@user), method: :patch, data: { confirm: "are you sure???" }, class:"btn btn-danger" %>
-      <%= link_to "Mon formulaire de candidature", wizard_path(:company_infos), class:"btn btn-success" %>
+      <%= link_to "Mon formulaire de candidature", formulaire_path(:company_infos), class:"btn btn-success" %>
     </div>
   </div>
 </div>
