--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -48,19 +48,19 @@
 
     <div class="row">
       <div class="col-10 offset-1">
-        <h2 class="green-bg-no-inline text-center my-5"><strong>Inscrivez-vous</strong> entre le 19 nov. et le 31 déc. !</h2>
+        <h2 class="green-bg-no-inline text-center mt-5"><strong>Inscrivez-vous</strong> entre le 19 nov. et le 31 déc. !</h2>
       </div>
     </div>
 
-    <hr/>
+
 
     <div class="video-wrapper">
       <iframe width="560" height="349" src="https://www.youtube.com/embed/ySBLAXtdZUg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
-    <hr/>
 
-    <h2 class="mt-5 text-center">Réunion d’informations pour les structures :</h2>
+
+    <h2 class="mt-0 text-center">Réunion d’informations pour les structures :</h2>
     <h2 class="text-center mb-3"><strong>6 déc. 2018 - 10h-12h - </strong><b>Athénée municipal de Bordeaux</b></h2>
     <p class="d-flex justify-content-center mb-5">
       <%= link_to "Je m'inscris", inscription_path, class:"btn btn-primary text-white bold"  %>
