liens athenees + cochage cgv creation company

--- a/app/stylesheets/components/_shame.scss
+++ b/app/stylesheets/components/_shame.scss
@@ -169,4 +169,12 @@ hr {
     text-decoration: none;
     color: #212529;
   }
+
+  a:hover {
+    text-decoration: none;
+  }
+}
+
+.red {
+  color: $red
 }
