stylisé le cochage

--- a/app/stylesheets/components/_shame.scss
+++ b/app/stylesheets/components/_shame.scss
@@ -178,3 +178,17 @@ hr {
 .red {
   color: $red
 }
+
+.minus {
+  font-size: 12px;
+}
+
+.fsmb-0 {
+  fieldset {
+    margin-bottom: 3px
+  }
+}
+
+.pl-35 {
+  padding-left: 35px;
+}
