--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -3,10 +3,10 @@
     <%= simple_form_for(@company, url: company_path(@company)) do |f| %>
       <h3 class="mr-2">Structure</h3>
       <div class="row">
-        <div class="col-12 col-md-6">
+        <div class="col-12 col-md-6 pr-3">
           <%= f.input :name, placeholder: 'Nom de la structure*', label: false %>
         </div>
-        <div class="col-12 col-md-6">
+        <div class="col-12 col-md-6 pl-3">
           <%= f.input :town, prompt: 'Ville de Bordeaux Métropole*', collection: ["Ambarès-et-Lagrave", "Ambès", "Artigues-près-Bordeaux", "Bassens",
           "Bègles", "Blanquefort", "Bordeaux", "Bouliac", "Bruges", "Carbon-Blanc",
           "Cenon", "Eysines", "Floirac", "Gradignan", "Le Bouscat", "Le Haillan",
@@ -14,10 +14,10 @@
           "Parempuyre", "Pessac", "Saint-Aubin-de-Médoc", "Saint-Louis-de-Montferrand",
           "Saint-Médard-en-Jalles", "Saint-Vincent-de-Paul", "Talence"], as: :select, label: false  %>
         </div>
-        <div class=" col-4 offset-4 pb-5">
-          <%= f.button :submit, "modifier", class: 'btn btn-primary text-white bold mr-3 mb-3' %>
-          <%= link_to "Retour", user_path(current_user), class:"btn btn-light mb-3" %>
-        </div>
+      </div>
+      <div class="d-flex justify-content-center pb-5">
+        <%= f.button :submit, "modifier", class: 'btn btn-primary text-white bold mr-3 mb-3' %>
+        <%= link_to "Retour", user_path(current_user), class:"btn btn-outline-primary ml-3 mb-3" %>
       </div>
     <% end %>
   </div>
