--- a/app/views/formulaires/company_infos.html.erb
+++ b/app/views/formulaires/company_infos.html.erb
@@ -6,6 +6,13 @@
   <p class="mb-0">Toutes les réponses que vous nous communiquez ci-après resteront confidentielles entre vous et les accompagnateurs Ekolo[geek].</p>
 
   <p class="text-center mt-4">Progression : <b>page 1 sur 5</b> </p>
+  <div class="dots d-flex justify-content-center">
+    <span class="blue"></span>
+    <span class=""></span>
+    <span class=""></span>
+    <span class=""></span>
+    <span class=""></span>
+  </div>
   <h2 class="mt-4 mb-4 green-bg">Généralités</h2>
 
   <%= simple_form_for(@form, method: :put, url: wizard_path) do |f| %>
