--- a/app/stylesheets/components/_shame.scss
+++ b/app/stylesheets/components/_shame.scss
@@ -9,6 +9,21 @@
   background: white !important;
 }
 
+.dots {
+  span {
+    height: 20px;
+    width: 20px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    margin: 0 5px 0;
+
+  }
+  .blue {
+    background-color: $blue
+  }
+}
+
 .down {
   @media only screen
   and (max-width: $mobile)
