--- a/app/views/formulaires/company_willing.html.erb
+++ b/app/views/formulaires/company_willing.html.erb
@@ -1,6 +1,13 @@
 <div class="container bg-white">
   <h1 class="my-5 header text-primary text-center">FORMULAIRE DE CANDIDATURE</h1>
   <p class="text-center">Progression : <b>page 3 sur 5</b> </p>
+  <div class="dots d-flex justify-content-center">
+    <span class="blue"></span>
+    <span class="blue"></span>
+    <span class="blue"></span>
+    <span class=""></span>
+    <span class=""></span>
+  </div>
   <h2 class="mt-5 mb-2 green-bg">Concernant votre structure</h2>
   <p class="mb-4">Pour répondre aux questions suivantes, veuillez vous mettre à la place de votre structure et répondez en tant que référent de la structure</p>
 
