--- a/app/views/formulaires/employees_willing.html.erb
+++ b/app/views/formulaires/employees_willing.html.erb
@@ -1,6 +1,13 @@
 <div class="container bg-white">
   <h1 class="my-5 header text-primary text-center">FORMULAIRE DE CANDIDATURE</h1>
   <p class="text-center">Progression : <b>page 4 sur 5</b> </p>
+  <div class="dots d-flex justify-content-center">
+    <span class="blue"></span>
+    <span class="blue"></span>
+    <span class="blue"></span>
+    <span class="blue"></span>
+    <span class=""></span>
+  </div>
   <h2 class="mt-5 mb-2 green-bg">Concernant vos collaborateur·rice·s qui participeraient au Défi Zéro Déchets des Pros</h2>
   <p class="mb-4">Pour les questions suivantes, veuillez vous mettre à la place de l'ensemble de vos collaborateur·rice·s et répondez en tant que leur représentant·e </p>
 
