--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -71,7 +71,7 @@
     <div class="newsletter">
       <%= render "newsletter"  %>
       <p class="text-center m-0">Votre adresse de messagerie est uniquement utilisée pour vous envoyer les lettres d'information du Défi Zéro Déchet des Pro.</p>
-      <p class="text-center mb-5">Vous pouvez à tout moment utiliser le lien de désabonnement intégré dans la newsletter. <%= link_to "En savoir plus sur la gestion de vos données et vos droits", politique_path  %></p>
+      <p class="text-center mb-5">Vous pouvez à tout moment utiliser le lien de désabonnement intégré dans la newsletter. <%= link_to "En savoir plus sur la gestion de vos données et vos droits", politique_path, class:"cool-link" %></p>
     </div>
 
     <hr/>
