--- a/app/views/pages/partenaires.html.erb
+++ b/app/views/pages/partenaires.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="container-ekologeek bg-white container-padding my-5">
       <h2 class="header text-primary text-center pt-5 mt-5">Ekolo[geek]</h2>
-      <h4 class="mb-5 text-center">Le Défi Zéro Déchet des Pros est porté par l'<%= link_to "association Ekolo[geek]", "http://www.ekologeek.com", target: :blank  %></h4>
+      <h4 class="mb-5 text-center">Le Défi Zéro Déchet des Pros est porté par l'<%= link_to "association Ekolo[geek]", "http://www.ekologeek.com", target: :blank, class:"cool-link" %></h4>
 
       <div class="row">
         <div class="col-lg-6">
@@ -25,10 +25,10 @@
         <div class="col-lg-6 d-flex align-items-center pt-3">
           <div class="text">
             <p class="mb-0">
-              Depuis 2016, nous accompagnons également des <strong>professionnels dans leur démarche d'éco-responsabilité</strong> interne. Par exemple, à la <strong><%= link_to "mairie du Bouscat", "http://www.bouscat.fr/", target: :blank %></strong>  nous avons accompagné  des « agents référents » sur le thème de l’économie circulaire, avec en 2017 cinq ateliers-formations, la visite d'une ressourcerie, et en 2018 nous continuons sur le thème des changements de comportements sur l'énergie et les déchets.
+              Depuis 2016, nous accompagnons également des <strong>professionnels dans leur démarche d'éco-responsabilité</strong> interne. Par exemple, à la <strong><%= link_to "mairie du Bouscat", "http://www.bouscat.fr/", target: :blank, class:"cool-link" %></strong>  nous avons accompagné  des « agents référents » sur le thème de l’économie circulaire, avec en 2017 cinq ateliers-formations, la visite d'une ressourcerie, et en 2018 nous continuons sur le thème des changements de comportements sur l'énergie et les déchets.
             </p>
             <p>
-              En 2016-2017, nous avons été <strong>missionnés par <%= link_to "Enedis", "https://www.enedis.fr/", target: :blank %></strong> Aquitaine-Nord pour <strong>étudier l’impact de la consommation d’énergie sur certain·e·s de leur client·e·s </strong> qui ont été accompagné·e·s par les Volontaires de la Transition Energétique (VTE) d'<%= link_to "Unis-Cité", "https://www.uniscite.fr/", target: :blank  %>.
+              En 2016-2017, nous avons été <strong>missionnés par <%= link_to "Enedis", "https://www.enedis.fr/", target: :blank, class:"cool-link" %></strong> Aquitaine-Nord pour <strong>étudier l’impact de la consommation d’énergie sur certain·e·s de leur client·e·s </strong> qui ont été accompagné·e·s par les Volontaires de la Transition Energétique (VTE) d'<%= link_to "Unis-Cité", "https://www.uniscite.fr/", target: :blank, class:"cool-link" %>.
             </p>
           </div>
         </div>
@@ -59,11 +59,6 @@
           <div class="col-12 col-sm-4 col-lg-2 text-center mb-4 d-flex align-items-center justify-content-center">
             <%= link_to "https://www.ademe.fr/", target: :blank do %>
               <%= image_tag "ADEME.png", height: 150 %>
-            <% end %>
-          </div>
-          <div class="col-12 col-sm-4 col-lg-2 text-center mb-4 d-flex align-items-center justify-content-center">
-            <%= link_to "https://www.cebx.fr/", target: :blank do %>
-              <%= image_tag "region.png", height: 140 %>
             <% end %>
           </div>
           <div class="col-12 col-sm-4 col-lg-2 text-center mb-4 d-flex align-items-center justify-content-center">
