--- a/app/views/pages/soutenir.html.erb
+++ b/app/views/pages/soutenir.html.erb
@@ -12,7 +12,7 @@
           <div id="soutenir2"></div>
           <div class="text">
             <p class="mb-0">En vous engageant à nos côtés par votre <b>soutien</b>, votre entreprise est <b>associée à la démarche d'exemplarité et d'innovation</b> de ce projet en matière de réduction des déchets, et peut bénéficier d'une <b>réduction fiscale</b> de 60% de votre don sur votre impôt sur les sociétés. Vous pouvez aussi choisir de nous <b>soutenir en nature</b> (prêt ou achat de matériel, fournitures...) <b>ou en compétences</b>.</p>
-            <p class="mb-0">Pour en savoir plus sur vos avantages à nous soutenir, et mieux connaître nos besoins, consultez notre <%= link_to "dossier de mécénat", dossier_de_mecenat_path %>.</p>
+            <p class="mb-0">Pour en savoir plus sur vos avantages à nous soutenir, et mieux connaître nos besoins, consultez notre <%= link_to "dossier de mécénat", dossier_de_mecenat_path, class:"cool-link" %>.</p>
           </div>
         </div>
         <div class="col-lg-6 px-4">
@@ -49,16 +49,16 @@
             </p>
             <ul class="list mb-4 bullet-custom">
               <li class="my-2">
-                <%= link_to "Communiqué de press", communique_de_press_path %>
+                <%= link_to "Communiqué de presse", communique_de_press_path, class:"cool-link" %>
               </li>
               <li class="my-2">
-                <%= link_to "Dossier de mécénat", dossier_de_mecenat_path %>
+                <%= link_to "Dossier de mécénat", dossier_de_mecenat_path, class:"cool-link" %>
               </li>
               <li class="my-2">
-                <%= link_to "Charte graphique", charte_graphique_path %>
+                <%= link_to "Charte graphique", charte_graphique_path, class:"cool-link" %>
               </li>
               <li class="my-2">
-                <%= link_to "Logo", logo_RVB_path %>
+                <%= link_to "Logo", logo_RVB_path, class:"cool-link" %>
               </li>
             </ul>
           </div>
