--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -28,7 +28,7 @@
           <%= f.input :newsletter_dzd, label: "Oui, je veux recevoir la newsletter du Défi Zéro Déchet des Pros" %>
         </div>
         <div class="col-12 mb-4">
-          <%= f.input :newsletter_ekg, label: "Oui, je veux recevoir la newsletter mensuelle de l’#{link_to 'association Ekolo[geek]', partenaires_path, target: :blank} (ex. contenu : actualités, recette de saison, Acte ekolo[geek]...)".html_safe %>
+          <%= f.input :newsletter_ekg, label: "Oui, je veux recevoir la newsletter mensuelle de l’#{link_to 'association Ekolo[geek]', partenaires_path, target: :blank, class:"cool-link"} (ex. contenu : actualités, recette de saison, Acte ekolo[geek]...)".html_safe %>
         </div>
         <div class="col-4">
           <%= f.input :password,
