--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <%= stylesheet_pack_tag 'application', media: 'all' %>
+    <%= favicon_link_tag 'favicon.png' %>
   </head>
   <body>
     <%= render 'shared/flashes' %>
