--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <div class="bg-white container viewport space-top">
+  <div class="bg-white container viewport space-top mb-5">
     <h1 class="mt-5 mb-4 header text-primary text-center">Profil</h1>
     <h3 class= "pt-3 mt-5">Référent·e</h3>
     <%= simple_form_for(@user, url: user_path(@user)) do |f|%>
