--- a/app/stylesheets/components/_navbar.scss
+++ b/app/stylesheets/components/_navbar.scss
@@ -8,9 +8,9 @@
   .nav-link {
     color: $light-gray;
     font-weight: bold;
-  }
-  .connexion-link {
-    color: white !important;
+    @media(max-width: $mobile){
+      color: white !important;
+    }
   }
   .navbar-toggler[data-toggle="collapse"] {
     height: auto;
@@ -77,7 +77,6 @@
 
 #nav_bar {
   background-color: $primary;
-
   &.animatedMenu{
     background-color: $primary;
     box-shadow: 0 6px 30px 5px rgba(0,0,0,0.12), 0 8px 10px -7px rgba(0,0,0,0.2);
@@ -125,14 +124,14 @@
   top: 80px;
   left: 30px;
   z-index: 11;
-  @media only screen
-  and (min-width: 992px)
-  and (max-width: 1159px) {
-    position: sticky;
-    top: 84px;
-    left: 30px;
-    z-index: 11;
-  }
+  // @media only screen
+  // and (min-width: 992px)
+  // and (max-width: 1159px) {
+  //   position: sticky;
+  //   top: 0px;
+  //   left: 30px;
+  //   z-index: 11;
+  // }
    svg {
      width: 100px;
      padding: 10px;
