--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -59,11 +59,11 @@
         </div>
       <% end %>
     </div>
-    <div class="links d-flex justify-content-around pb-4">
-      <%= link_to "Modifier mon profil", edit_user_path(@user), class:"btn btn-success" %>
-      <%= link_to "Modifier ma structure", edit_company_path(@user.company_id), class:"btn btn-success" %>
-      <%= link_to "Suprimer mon compte", unknown_user_path(@user), method: :patch, data: { confirm: "are you sure???" }, class:"btn btn-danger" %>
-      <%= link_to "test du wizard", big_form_path(:company_infos), class:"btn btn-success" %>
+    <div class="links d-flex flex-column flex-lg-row justify-content-between pb-4">
+      <%= link_to "Modifier mon profil", edit_user_path(@user), class:"btn btn-success my-2" %>
+      <%= link_to "Modifier ma structure", edit_company_path(@user.company_id), class:"btn btn-success my-2" %>
+      <%= link_to "test du wizard", big_form_path(:company_infos), class:"btn btn-success my-2" %>
+      <%= link_to "Suprimer mon compte", unknown_user_path(@user), method: :patch, data: { confirm: "are you sure???" }, class:"btn btn-danger my-2" %>
     </div>
   </div>
 </div>
