--- a/app/views/formulaires_mailer/candidature_confirmation.html.erb
+++ b/app/views/formulaires_mailer/candidature_confirmation.html.erb
@@ -4,7 +4,7 @@
 
 <p>Nous vous indiquerons le 9 janvier 2019 si votre structure est sélectionnée pour y participer.</p>
 
-<p>La première rencontre collective aura lieu le 14 janvier 2019 au matin (horaires à venir) à la tour Laure Gatet de Bordeaux Métropole au <%= link_to "31-41 Cours du Maréchal Juin à Bordeaux", "https://www.google.fr/maps/place/41+Cours+Mar%C3%A9chal+Juin,+33000+Bordeaux/@44.8361863,-0.5813328,14.71z/data=!4m5!3m4!1s0xd5527e9ea19edb3:0x6384a056d1476814!8m2!3d44.8361404!4d-0.5834564?hl=fr" %></p>
+<p>La première rencontre collective aura lieu le 14 janvier 2019 à 09h30 à la tour Laure Gatet de Bordeaux Métropole au <%= link_to "31-41 Cours du Maréchal Juin à Bordeaux", "https://www.google.fr/maps/place/41+Cours+Mar%C3%A9chal+Juin,+33000+Bordeaux/@44.8361863,-0.5813328,14.71z/data=!4m5!3m4!1s0xd5527e9ea19edb3:0x6384a056d1476814!8m2!3d44.8361404!4d-0.5834564?hl=fr" %></p>
 
 <p>Notre équipe se tient à votre disposition pour vous aider dans votre candidature.</p>
 
