--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -16,7 +16,7 @@
         </div>
       </div>
       <div class="d-flex justify-content-center pb-5">
-        <%= f.button :submit, "modifier", class: 'btn btn-primary text-white bold mr-3 mb-3' %>
+        <%= f.button :submit, "Modifier", class: 'btn btn-primary text-white bold mr-3 mb-3' %>
         <%= link_to "Retour", user_path(current_user), class:"btn btn-outline-primary ml-3 mb-3" %>
       </div>
     <% end %>
