--- a/app/views/formulaires/company_willing.html.erb
+++ b/app/views/formulaires/company_willing.html.erb
@@ -47,7 +47,8 @@
       </label>
     <% end %>
 
-    <p class="mt-4"><b>15.</b> Si Oui, choisissez le·s dispositif·s dans le·lesquel·s votre structure est engagée :</p>
+    <p class="mt-4 mb-0"><b>15.</b> Si Oui, choisissez le·s dispositif·s dans le·lesquel·s votre structure est engagée :</p>
+    <p class="ml-3"><em>Plusieurs réponses possibles</em></p>
     <%= f.collection_check_boxes :dispositive_ids, @dispositives, :id, :name, checked: @form.dispositives.map(&:id) do |input| %>
       <label class="mx-2 mb-3">
         <%= input.check_box %>
