add logo in mail and helper

--- a/app/views/companies_mailer/creation_confirmation.html.erb
+++ b/app/views/companies_mailer/creation_confirmation.html.erb
@@ -12,4 +12,5 @@ Date limite d'envoi du formulaire : 31 décembre 2018.</p>
 
 <p>Cliquez sur le lien ci-dessous pour activer votre compte : <%= link_to "Activation du compte", "http://www.defi-zero-dechet-pro.com/users/sign_in" %></p>
 
-<p>Écologiquement, l'équipe Défi</p>
+<p>Écologiquement, l'équipe Défi.</p>
+<%= email_image_tag("logo.jpg") %>
