--- a/app/views/formulaires_mailer/candidature_confirmation.html.erb
+++ b/app/views/formulaires_mailer/candidature_confirmation.html.erb
@@ -8,3 +8,5 @@
 
 <p>Notre équipe se tient à votre disposition pour vous aider dans votre candidature.</p>
 
+<p>Écologiquement, l'équipe Défi.</p>
+<%= email_image_tag("logo.jpg") %>
