--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -88,10 +88,10 @@
             <div class="col-12 col-md-3 mb-4">
               <%= user.input :password, placeholder: 'Mot de passe*', label: false  %>
             </div>
-            <div class="col-12 ml-3">
+            <div class="col-12 ml-lg-3">
               <%= user.input :newsletter_dzd, label: "Oui, je veux recevoir la newsletter du Défi Zéro Déchet des Pros" %>
             </div>
-            <div class="col-12 ml-3">
+            <div class="col-12 ml-lg-3">
               <%= user.input :newsletter_ekg, label: "Oui, je veux recevoir la newsletter mensuelle de l’#{link_to 'association Ekolo[geek]', partenaires_path, target: :blank, class:"cool-link"} (ex. contenu : actualités, recette de saison, Acte ekolo[geek]...)".html_safe %>
             </div>
           </div>
