--- a/app/views/layouts/connected.html.erb
+++ b/app/views/layouts/connected.html.erb
@@ -10,7 +10,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>DZD Pros</title>
+    <title>Défi Zéro Déchet des Pros 2018 Bordeaux Métropole</title>
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <%= stylesheet_pack_tag 'application', media: 'all' %>
