--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -11,6 +11,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Défi Zéro Déchet des Pros 2018 Bordeaux Métropole</title>
+    <meta name="description" content="Ekolo[geek] propose un accompagnement sur 6 mois et des ateliers pratiques aux entreprises de la métropole pour diminuer leurs déchets de fonctionnement, les inscriptions sont ouvertes">
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <%= stylesheet_pack_tag 'application', media: 'all' %>
